--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,11 @@
         android:textColor="@android:color/white"
         android:elevation="4dp" />
 
+    <Button
+        android:id="@+id/btn_show_device_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mostrar Device Info" />
+
+
 </LinearLayout>
